[package]
name = "dtn7-plus"
version = "0.7.1"
authors = ["Lars Baumgaertner <baumgaertner@cs.tu-darmstadt.de>"]
description = "Additional helpers for rust dtn daemon"
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["network-programming"]
repository    = "https://github.com/dtn7/dtn7-plus-rs"
keywords = ["peer2peer", "dtn"]
exclude = [".vscode/", ".travis.yml"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bp7 = "0.10.1"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
attohttpc = { version = "0.22.0", default-features = false, optional = true }
serde_cbor = { version = "0.11.1", optional = true }
smaz = { version = "0.1.0", optional = true }
thiserror = "1.0.26"
derive-try-from-primitive = { version = "1.0.0", optional = true }
serde_bytes = { version = "0.11.5", optional = true }
bitflags = { version = "1.2.1", optional = true }
clap = {version = "3.0.10", optional = true, features = ["derive", "cargo"]}
humantime = { version = "2.1.0", optional = true }
anyhow = { version = "1.0.42", optional = true }
url = { version = "2.2.2", optional = true }
tungstenite = { version = "0.17.2", features = [], default-features = false, optional = true }
uuid = { version = "1.1.2", features = ["serde", "v4"], optional = true }
base64 = "0.13.0"


[features]
client = ["attohttpc", "tungstenite", "anyhow", "common", "url"]
sms = ["smaz", "common"]
news = ["smaz", "common", "uuid"]
common = ["serde_bytes", "serde_cbor"]
default = ["sms", "client", "location", "cli", "news", "common"]
location = ["derive-try-from-primitive", "common", "bitflags"]
cli = ["clap", "humantime", "client", "anyhow", "url"]

[[bin]]
name = "dtngpslogger"
required-features = ["location", "cli"]

[[bin]]
name = "dtngpsreceiver"
required-features = ["location", "cli"]

[[bin]]
name = "d7news"
required-features = ["news", "cli"]
