[package]
name = "dtn7-plus"
version = "0.7.3"
authors = ["Lars Baumgaertner <baumgaertner@cs.tu-darmstadt.de>"]
description = "Additional helpers for rust dtn daemon"
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["network-programming"]
repository = "https://github.com/dtn7/dtn7-plus-rs"
keywords = ["peer2peer", "dtn"]
exclude = [".vscode/", ".travis.yml"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bp7 = "0.10.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_bytes = { version = "0.11.17", optional = true }
serde_cbor = { version = "0.11.2", optional = true }
attohttpc = { version = "0.30.1", default-features = false, optional = true }
smaz = { version = "0.1.0", optional = true }
thiserror = "2.0.16"
derive-try-from-primitive = { version = "1.0.0", optional = true }
bitflags = { version = "2.9.4", features = ["serde"], optional = true }
clap = { version = "4.5.47", features = ["derive", "cargo"], optional = true }
humantime = { version = "2.2.0", optional = true }
anyhow = { version = "1.0.99", optional = true }
tungstenite = { version = "0.27.0", optional = true }
uuid = { version = "1.18.1", features = ["serde", "v4"], optional = true }
base64 = "0.22.1"


[features]
client = ["attohttpc", "tungstenite", "anyhow", "common"]
sms = ["smaz", "common"]
news = ["smaz", "common", "uuid"]
common = ["serde_bytes", "serde_cbor"]
default = ["sms", "client", "location", "cli", "news", "common"]
location = ["derive-try-from-primitive", "common", "bitflags"]
cli = ["clap", "humantime", "client", "anyhow"]

[[bin]]
name = "dtngpslogger"
required-features = ["location", "cli"]

[[bin]]
name = "dtngpsreceiver"
required-features = ["location", "cli"]

[[bin]]
name = "d7news"
required-features = ["news", "cli"]
